--- a/project.html
+++ b/project.html
@@ -63,7 +63,7 @@
 
           <div class="row">
             <div class="col-xs-6">
-              <img src="./assets/images/14_%_save.png" alt="" class="img-responsive reveal-content" data-action="zoom">
+              <img src="./assets/images/opex_reduction.png" alt="" class="img-responsive reveal-content" data-action="zoom">
             </div>
             <div class="col-xs-6">
               <img src="./assets/images/elisa_automate_process.png" alt="" class="img-responsive reveal-content" data-action="zoom">
