Adds the end-user feature

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <div class="text-center">
-            <h2>The idea behind Intelligent Energy Saver</h2>
+            <h2>Intelligent Energy Saver End-users engagement Feature</h2>
             <p>
-              Network operators' energy bill has become a major cost item. With the 5G-rollout, the energy bills are growing even more. Vendor’s static energy-saving settings are not sufficiently turning network elements ‘off’ when not in use.
-              Elisa Polystar’s Intelligent Energy Saver takes the customers into account when turning off the base station and saves up to 14% of the energy consumption.
+              The end-users are engaged in the energy-saving process by a new feature that shows the amount of energy saved
+              and CO2 emissions reduced by using of Intelligent Energy Saver in the Radio Access Network. The feature is added to the users' platforms (e.g OmaElisa)
             <br>
            </p>
           </div>
