--- a/project.html
+++ b/project.html
@@ -58,7 +58,7 @@
           and optimisation.</p>
           
           <div class="section-container-spacer">
-            <img src="./assets/images/hanko_sc_v0.3.png" alt="" class="img-responsive reveal-content" data-action="zoom">
+            <img src="./assets/images/hanko_sc_v0.4.png" alt="" class="img-responsive reveal-content" data-action="zoom">
           </div>
 
           <div class="row">
@@ -78,7 +78,7 @@
     <div class="container">
       <div class="row section-container-spacer">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
-          <h2 class="text-center">Benefits of intergrating the Intelligent Energy Saver solution</h2>
+          <h2 class="text-center">Why Should Mobile Operators integrate the Intelligent Energy Saver into their Network</h2>
           <div class="section-container-spacer">
             <p><b>High and growing energy OPEX:</b> Network elements can be automatically turned ‘off’ when not in use.
             We add extra capabilities to RAN-vendors’ energy saving features. </p>
@@ -91,7 +91,13 @@
             weekends. </p>
             <p><b>Affected users:</b> Minimize the effect on user experience by using smart scheduling
             that takes usage into consideration. </p>
-          </div>  
+            <p><b>End-user engagement:</b> A feature is added to the users' platform (e.g OmaElisa) to engage the users
+            in the energy saving process  </p>
+          </div>
+          <h2 class="text-center">The Sustainable Solutions Team</h2>
+          <div class="section-container-spacer">
+            <p><b>Team Members:</b> Aleksi Ala-Uotila, Tareque Mahmud, Aly Metwaly, Alhasan Alquasi, and Ruixian Pan 
+          </div>
           <img src="./assets/images/team_picture.jpg" alt="" class="img-responsive reveal-content" data-action="zoom">
         </div>  
       </div>
