--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link href="" rel="stylesheet">
 
 
-  <title>Title page</title>
+  <title>Intelligent Energy Saver</title>
 
 <link href="./main.550dcf66.css" rel="stylesheet"></head>
 
@@ -38,8 +38,8 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="./index.html" title="">Home</a></li>
-          <li><a href="./project.html" title="">Intelligent Energy Saver</a></li>
+          <li><a href="./index.html" title="">Intelligent Energy Saver</a></li>
+          <li><a href="./project.html" title="">About Elisa Polystar</a></li>
        
 
         </ul>
