--- a/project.html
+++ b/project.html
@@ -18,7 +18,7 @@
   <link href="" rel="stylesheet">
 
 
-  <title>Title page</title>
+  <title>About Elisa Polystar</title>
 
 <link href="./main.550dcf66.css" rel="stylesheet"></head>
 
