--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="./index.html" title="">Intelligent Energy Saver</a></li>
-          <li><a href="./project.html" title="">About Elisa Polystar</a></li>
+          <li><a href="./index.html" title="">IES Users Engagement Feature</a></li>
+          <li><a href="./project.html" title="">More about IES</a></li>
        
 
         </ul>
