--- a/project.html
+++ b/project.html
@@ -18,7 +18,7 @@
   <link href="" rel="stylesheet">
 
 
-  <title>About Elisa Polystar</title>
+  <title>More About IES</title>
 
 <link href="./main.550dcf66.css" rel="stylesheet"></head>
 
@@ -38,8 +38,8 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="./index.html" title="">Intelligent Energy Saver</a></li>
-          <li><a href="./project.html" title="">About Elisa Polystar</a></li>
+          <li><a href="./index.html" title="">IES Users Engagement Feature</a></li>
+          <li><a href="./project.html" title="">More about IES</a></li>
          
 
         </ul>
@@ -52,22 +52,22 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
-          <h1 class="text-center">Elisa Polystar</h1>
+          <h1 class="text-center">About Elisa Polystar</h1>
           <p>Elisa Polystar is the only supplier on the market who has developed AI automation for networks and implemented it in our
           own networks for ten years and counting. Our solutions offer a set of field-proven use cases for planning, operations
           and optimisation.</p>
-          
+          <p>Elisa Polystar provides the Intelligent Energy Saver (IER) AI-based energy saving
+          Multivendor energy saving to reduce energy OPEX while keeping a stable network quality level.</p>
+          <h1 class="text-center">IES Visualizations Demo</h1>
           <div class="section-container-spacer">
             <img src="./assets/images/hanko_sc_v0.4.png" alt="" class="img-responsive reveal-content" data-action="zoom">
           </div>
-
-          <div class="row">
-            <div class="col-xs-6">
-              <img src="./assets/images/opex_reduction.png" alt="" class="img-responsive reveal-content" data-action="zoom">
-            </div>
-            <div class="col-xs-6">
-              <img src="./assets/images/elisa_automate_process.png" alt="" class="img-responsive reveal-content" data-action="zoom">
-            </div>
+          <div class="section-container-spacer">
+            <img src="./assets/images/hanko_bar_chart.png"
+                  alt=""
+                  class="img-responsive reveal-content"
+                  data-action="zoom">
+          </div>
           </div>
        </div>
       </div>
@@ -78,7 +78,7 @@
     <div class="container">
       <div class="row section-container-spacer">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
-          <h2 class="text-center">Why Should Mobile Operators integrate the Intelligent Energy Saver into their Network</h2>
+          <h2 class="text-center">Why Should Mobile Operators integrate the Intelligent Energy Saver into their Networks?!</h2>
           <div class="section-container-spacer">
             <p><b>High and growing energy OPEX:</b> Network elements can be automatically turned ‘off’ when not in use.
             We add extra capabilities to RAN-vendors’ energy saving features. </p>
@@ -93,8 +93,22 @@
             that takes usage into consideration. </p>
             <p><b>End-user engagement:</b> A feature is added to the users' platform (e.g OmaElisa) to engage the users
             in the energy saving process  </p>
+          <div class="row">
+            <div class="col-xs-6">
+              <img src="./assets/images/opex_reduction.png"
+                    alt=""
+                    class="img-responsive reveal-content"
+                    data-action="zoom">
+            </div>
+            <div class="col-xs-6">
+              <img src="./assets/images/elisa_automate_process.png"
+                    alt=""
+                    class="img-responsive reveal-content"
+                    data-action="zoom">
+            </div>
           </div>
-          <h2 class="text-center">The Sustainable Solutions Team</h2>
+
+          <h2 class="text-center">The Sustainable Developers Team</h2>
           <div class="section-container-spacer">
             <p><b>Team Members:</b> Aleksi Ala-Uotila, Tareque Mahmud, Aly Metwaly, Alhasan Alquasi, and Ruixian Pan 
           </div>
