Fixes typos and mistakes

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <div class="text-center">
-            <h2>Intelligent Energy Saver End-users engagement Feature</h2>
+            <h2>Intelligent Energy Saver End-users Engagement Feature</h2>
             <p>
               The end-users are engaged in the energy-saving process by a new feature that shows the amount of energy saved
-              and CO2 emissions reduced by using of Intelligent Energy Saver in the Radio Access Network. The feature is added to the users' platforms (e.g OmaElisa)
+              and CO2 emissions reduced by using the Intelligent Energy Saver in the Radio Access Network (RAN). The feature is added to the operators' platforms (e.g. OmaElisa)
             <br>
            </p>
           </div>
