--- a/project.html
+++ b/project.html
@@ -56,9 +56,9 @@
           <p>Elisa Polystar is the only supplier on the market who has developed AI automation for networks and implemented it in our
           own networks for ten years and counting. Our solutions offer a set of field-proven use cases for planning, operations
           and optimisation.</p>
-          <p>Elisa Polystar provides the Intelligent Energy Saver (IER) AI-based energy saving
+          <p>Elisa Polystar provides the Intelligent Energy Saver (IES) AI-based energy saving
           Multivendor energy saving to reduce energy OPEX while keeping a stable network quality level.</p>
-          <h1 class="text-center">IES Visualizations Demo</h1>
+          <h1 class="text-center">IES Visualization Demo</h1>
           <div class="section-container-spacer">
             <img src="./assets/images/hanko_sc_v0.4.png" alt="" class="img-responsive reveal-content" data-action="zoom">
           </div>
@@ -78,7 +78,7 @@
     <div class="container">
       <div class="row section-container-spacer">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
-          <h2 class="text-center">Why Should Mobile Operators integrate the Intelligent Energy Saver into their Networks?!</h2>
+          <h2 class="text-center">Why Should Mobile Operators Integrate the IES into their Networks?!</h2>
           <div class="section-container-spacer">
             <p><b>High and growing energy OPEX:</b> Network elements can be automatically turned ‘off’ when not in use.
             We add extra capabilities to RAN-vendors’ energy saving features. </p>
@@ -91,7 +91,7 @@
             weekends. </p>
             <p><b>Affected users:</b> Minimize the effect on user experience by using smart scheduling
             that takes usage into consideration. </p>
-            <p><b>End-user engagement:</b> A feature is added to the users' platform (e.g OmaElisa) to engage the users
+            <p><b>End-user engagement:</b> A feature is added to the users' platform (e.g. OmaElisa) to engage the users
             in the energy saving process  </p>
           <div class="row">
             <div class="col-xs-6">
@@ -110,7 +110,7 @@
 
           <h2 class="text-center">The Sustainable Developers Team</h2>
           <div class="section-container-spacer">
-            <p><b>Team Members:</b> Aleksi Ala-Uotila, Tareque Mahmud, Aly Metwaly, Alhasan Alquasi, and Ruixian Pan 
+            <p><b>Team Members:</b> Tareque Mahmud, Aleksi Ala-Uotila, Aly Metwaly, Hasan Alqaysi, and Ruixian Pan 
           </div>
           <img src="./assets/images/team_picture.jpg" alt="" class="img-responsive reveal-content" data-action="zoom">
         </div>  
